clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/CLM_Contract__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>