clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Box_Intake_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Intake_File_ID__c</fullName>
    <label>Box Intake File ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>