clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Box_Workspace_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Workspace_Folder_ID__c</fullName>
    <description>Authoritative Box workspace folder identifier; content remains in Box.</description>
    <externalId>true</externalId>
    <label>Box Workspace Folder ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>