clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Box_Workspace_URL__c.field-meta.xml
<CustomField>
    <fullName>Box_Workspace_URL__c</fullName>
    <label>Box Workspace URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>