clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Contracts</relationshipLabel>
    <relationshipName>Owned_CLM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>