clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Business_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Name__c</fullName>
    <description>Validated intake value retained when no active Salesforce User is explicitly resolved.</description>
    <label>Business Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>