clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <description>Stable contract identifier supplied by validated Box intake and used for idempotent upsert.</description>
    <externalId>true</externalId>
    <label>Contract ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>