clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>MSA Package</fullName><default>true</default><label>MSA Package</label></value>
            <value><fullName>DPA</fullName><default>false</default><label>DPA</label></value>
            <value><fullName>SOW</fullName><default>false</default><label>SOW</label></value>
            <value><fullName>Order Form</fullName><default>false</default><label>Order Form</label></value>
            <value><fullName>Procurement Agreement</fullName><default>false</default><label>Procurement Agreement</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>