clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Counterparty__c</fullName>
    <label>Counterparty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>