clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Counterparty_Account__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Account__c</fullName>
    <label>Counterparty</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Counterparty Contracts</relationshipLabel>
    <relationshipName>Counterparty_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>