clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Counterparty_Entity__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Entity__c</fullName>
    <description>The operating entity that actually signs, where a counterparty contracts through subsidiaries or regions. The relationship, and record access, still hang off Counterparty_Account__c: a sharing set matches a Contact to one Account and does not walk an account hierarchy, so modelling subsidiaries as child Accounts would have hidden their contracts from the very people who signed them.</description>
    <inlineHelpText>Signing entity, where the counterparty contracts through subsidiaries. Leave empty when the parent signs directly.</inlineHelpText>
    <label>Counterparty Entity</label>
    <length>120</length>
    <type>Text</type>
</CustomField>