clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Data_Category__c.field-meta.xml
<CustomField>
    <fullName>Data_Category__c</fullName>
    <label>Data Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Personal Data</fullName><default>false</default><label>Personal Data</label></value>
            <value><fullName>PHI</fullName><default>false</default><label>PHI</label></value>
            <value><fullName>Financial Data</fullName><default>false</default><label>Financial Data</label></value>
            <value><fullName>Confidential</fullName><default>false</default><label>Confidential</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>