clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Deal_Value__c</fullName>
    <label>Deal Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>