clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>When an executed contract's term ends, and the date a renewal is measured back from. Empty until a contract is executed: a contract still in negotiation has no term to end, and a date here would imply one had been agreed.</description>
    <inlineHelpText>Term end date. Leave empty until the contract is executed.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>