clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Intake_Workflow_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Intake_Workflow_Run_ID__c</fullName>
    <label>Intake Workflow Run ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>