clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Last_Box_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Box_Sync__c</fullName>
    <label>Last Box Sync</label>
    <type>DateTime</type>
</CustomField>