clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contract Opportunities</relationshipLabel>
    <relationshipName>Contract_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>