clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Record_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Source__c</fullName>
    <label>Record Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Box Form</fullName><default>true</default><label>Box Form</label></value>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
            <value><fullName>API</fullName><default>false</default><label>API</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>