clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>US</fullName><default>true</default><label>US</label></value>
            <value><fullName>EU</fullName><default>false</default><label>EU</label></value>
            <value><fullName>APAC</fullName><default>false</default><label>APAC</label></value>
            <value><fullName>Global</fullName><default>false</default><label>Global</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>