clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Special_Terms_Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Risk_Notes__c</fullName>
    <label>Special Terms / Risk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>