clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Intake</fullName><default>true</default><label>Intake</label></value>
            <value><fullName>Legal Review</fullName><default>false</default><label>Legal Review</label></value>
            <value><fullName>Business Review</fullName><default>false</default><label>Business Review</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Signature</fullName><default>false</default><label>Signature</label></value>
            <value><fullName>Executed</fullName><default>false</default><label>Executed</label></value>
            <value><fullName>Obligations Active</fullName><default>false</default><label>Obligations Active</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>