clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/fields/Target_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Signature_Date__c</fullName>
    <label>Target Signature Date</label>
    <type>Date</type>
</CustomField>