clm-salesforce-project/force-app/main/default/objects/CLM_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_ID__c</columns>
    <columns>Counterparty__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Target_Signature_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All CLM Contracts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>